--- a/Basic Front End Development Projects/Portfolio/css/style.css
+++ b/Basic Front End Development Projects/Portfolio/css/style.css
@@ -17,6 +17,19 @@ a {
 .gray-text {
   color: gray;
 }
+.project-text {
+  color: gray;
+}
+img {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+  /* For IE8 and earlier */
+}
+.thumbnail img:hover {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  /* For IE8 and earlier */
+}
 .me {
   width: 250px;
   height: 250px;
