--- a/Basic Front End Development Projects/Random Quote Generator/css/style.css
+++ b/Basic Front End Development Projects/Random Quote Generator/css/style.css
@@ -1,5 +1,4 @@
-p,
-.container-fluid {
+p, .container-fluid {
   text-align: center;
   padding-bottom: 20px;
   margin-left: 10%;
@@ -7,25 +6,21 @@ p,
   color: #e4f1fe;
   font-family: 'Comic Sans MS';
 }
-
 body {
   position: relative;
   background-color: #0d493b;
 }
-
 .well {
   margin-left: 3%;
   margin-right: 3%;
   background-color: #0d493b;
 }
-
 footer {
   min-height: 1vh;
   padding-top: 20px;
   padding-bottom: 1px;
   background-color: black;
 }
-
 section {
   min-height: 91.8vh;
   font-size: 18px;
