--- a/Basic Front End Development Projects/Local Weather/css/style.css
+++ b/Basic Front End Development Projects/Local Weather/css/style.css
@@ -19,7 +19,7 @@ body {
   position: relative;
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 .well {
   margin-left: 35%;
