--- a/Basic Front End Development Projects/Pomodoro Clock/css/style.css
+++ b/Basic Front End Development Projects/Pomodoro Clock/css/style.css
@@ -18,11 +18,12 @@ body {
 .top-row {
   margin-top: 50px
 }
-.circle {
+.well {
   border-radius: 50%;
   border: 2px solid #134369;
   padding: 20px;
   width: 200px;
   height: 150px;
   text-align: center;
+  margin-bottom: 50px;
 }
