--- a/Basic Front End Development Projects/Pomodoro Clock v2/css/style.css
+++ b/Basic Front End Development Projects/Pomodoro Clock v2/css/style.css
@@ -14,22 +14,11 @@ footer {
 }
 body {
   position: relative;
-  background-color: #ACECAA;
+  background-color: #ACECF7;
 }
 .top-row {
   margin-top: 50px
 }
 .bottom {
   margin-bottom: 50px;
-}
-.well {
-  border-radius: 50%;
-  border: 2px solid #134369;
-  padding: 20px;
-  width: 200px;
-  height: 200px;
-  text-align: center;
-  margin-bottom: 50px;
-  margin-left: auto;
-  margin-right: auto;
 }
