--- a/Basic Front End Development Projects/Twitch Status/css/style.css
+++ b/Basic Front End Development Projects/Twitch Status/css/style.css
@@ -3,14 +3,15 @@
 }
 .list div {
   display: list-item;
-  border-top: 10px solid #00bcd4;
-  border-bottom: 10px solid #00bcd4;
 }
 .logo {
   border-radius: 50%;
   height: 42px;
   width: 42px;
   margin-right: 10px;
+}
+.stat {
+  margin-left: 52px;
 }
 section {
   min-height: 95vh;
@@ -25,7 +26,7 @@ footer {
   heigth: 50px;
   line-height: 50px;
   bottom: 0;
-  position: fixed;
+  position: relative;
   text-align: center;
 }
 .search-form .form-group {
