--- a/Basic Front End Development Projects/Twitch Status/css/style.css
+++ b/Basic Front End Development Projects/Twitch Status/css/style.css
@@ -1,107 +1,109 @@
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 .list div {
-    display: list-item;
+  display: list-item;
 }
 
 #home,
 #menu1,
-#menu2,
-#nav {
-    padding: 25px 25px;
-    background-color: #996633;
-    border-radius: 25px;
+#menu2 {
+  padding: 25px 25px;
+  background-color: #996633;
+  border-radius: 25px;
 }
 
 a {
-    color: white;
+  color: white;
 }
 
 .logo {
-    border-radius: 50%;
-    height: 42px;
-    width: 42px;
-    margin-right: 10px;
+  border-radius: 50%;
+  height: 42px;
+  width: 42px;
+  margin-right: 10px;
 }
 
 .stat {
-    margin-left: 52px;
+  margin-left: 52px;
 }
 
 section {
-    min-height: 95vh;
-    padding-top: 1%;
-    color: #fff;
-    background-color: #00bcd4;
+  min-height: 95vh;
+  padding-top: 1%;
+  color: #fff;
+  background-color: #00bcd4;
 }
 
 footer {
-    background-color: black;
-    color: gray;
-    width: 100%;
-    heigth: 50px;
-    line-height: 50px;
-    bottom: 0;
-    position: relative;
-    text-align: center;
+  background-color: black;
+  color: gray;
+  width: 100%;
+  heigth: 50px;
+  line-height: 50px;
+  bottom: 0;
+  position: relative;
+  text-align: center;
 }
 
 .search-form .form-group {
-    float: right !important;
-    transition: all 0.35s, border-radius 0s;
-    width: 32px;
-    height: 32px;
-    background-color: #fff;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-    border-radius: 25px;
-    border: 1px solid #ccc;
+  float: right !important;
+  transition: all 0.35s, border-radius 0s;
+  width: 32px;
+  height: 32px;
+  background-color: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  border-radius: 25px;
+  border: 1px solid #ccc;
 }
 
 .search-form .form-group input.form-control {
-    padding-right: 20px;
-    border: 0 none;
-    background: transparent;
-    box-shadow: none;
-    display: block;
+  padding-right: 20px;
+  border: 0 none;
+  background: transparent;
+  box-shadow: none;
+  display: block;
 }
 
-.search-form .form-group input.form-control::-webkit-input-placeholder {
-    display: none;
+.search-form .form-group input.form-contr
+ol::-webkit-input-placeholder {
+  display: none;
 }
 
 .search-form .form-group input.form-control:-moz-placeholder {
-    /* Firefox 18- */
-    display: none;
+  /* Firefox 18- */
+  
+  display: none;
 }
 
 .search-form .form-group input.form-control::-moz-placeholder {
-    /* Firefox 19+ */
-    display: none;
+  /* Firefox 19+ */
+  
+  display: none;
 }
 
 .search-form .form-group input.form-control:-ms-input-placeholder {
-    display: none;
+  display: none;
 }
 
 .search-form .form-group:hover,
 .search-form .form-group.hover {
-    width: 100%;
-    border-radius: 4px 25px 25px 4px;
+  width: 100%;
+  border-radius: 4px 25px 25px 4px;
 }
 
 .search-form .form-group span.form-control-feedback {
-    position: absolute;
-    top: -1px;
-    right: -2px;
-    z-index: 2;
-    display: block;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
-    text-align: center;
-    color: #3596e0;
-    left: initial;
-    font-size: 14px;
+  position: absolute;
+  top: -1px;
+  right: -2px;
+  z-index: 2;
+  display: block;
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  color: #3596e0;
+  left: initial;
+  font-size: 14px;
 }
