--- a/Intermediate Front End Development Projects/Wikipedia Viwer/css/style.css
+++ b/Intermediate Front End Development Projects/Wikipedia Viwer/css/style.css
@@ -14,7 +14,7 @@ section {
   padding-top: 10px;
   padding-bottom: 10px;
   color: #fff;
-  background-color: #00bcd4;
+  background-color: #34addb;
   bottom: 10px;
 }
 footer {
