--- a/Intermediate Front End Development Projects/Wikipedia Viwer/css/style.css
+++ b/Intermediate Front End Development Projects/Wikipedia Viwer/css/style.css
@@ -19,6 +19,9 @@ section {
 .results {
   margin-top: 10%;
 }
+.random {
+  text-align: center;
+}
 footer {
   background-color: black;
   color: gray;
@@ -32,7 +35,7 @@ footer {
 .search-position {
   position: absolute;
   left: 50%;
-  top: 15%;
+  top: 20%;
   transform: translate(-50%, -50%);
 }
 
