Fixed results bar size

--- a/Basic Front End Development Projects/Calculator/css/style.css
+++ b/Basic Front End Development Projects/Calculator/css/style.css
@@ -90,6 +90,7 @@ button {
   color: #333333;
   text-align: right;
   vertical-align: top;
+  height: 65px;
 }
 .tg .tg-ftb4 {
   font-weight: bold;
