It displays icons
Now I can play, I still have to make it declare a win and keep score.

--- a/Intermediate Front End Development Projects/TicTacToe/css/style.css
+++ b/Intermediate Front End Development Projects/TicTacToe/css/style.css
@@ -35,3 +35,9 @@ footer {
   display: block;
   width: 295px;
 }
+.ico {
+  margin: -10px auto;
+  display: block;
+  color: black;
+  font-size: 80px;
+}
