--- a/Intermediate Front End Development Projects/TicTacToe/css/style.css
+++ b/Intermediate Front End Development Projects/TicTacToe/css/style.css
@@ -4,7 +4,6 @@ h1, h3 {
   color: #663300;
 }
 section {
-  min-height: 90vh;
   padding-top: 10px;
   padding-bottom: 10px;
   color: #fff;
@@ -22,16 +21,18 @@ footer {
   position: relative;
   text-align: center;
   font-family: cursive, sans-serif;
+  width: 100%;
+  bottom: 0;
+  position: fixed;
 }
 .field {
   border-color: black;
   width: 100px;
   height: 100px;
-  border-style: solid;
   border-width: 5px;
 }
 .board {
-  margin: 0 auto;
+  margin: 40px auto;
   display: block;
   width: 295px;
 }
@@ -40,4 +41,28 @@ footer {
   display: block;
   color: black;
   font-size: 80px;
+}
+.winningRow {
+  background-color: red;
+}
+#r2c1 {
+  border-style: solid solid solid none;
+}
+#r2c2 {
+  border-style: solid none solid none;
+}
+#r2c3 {
+  border-style: solid none solid solid;
+}
+#r1c1 {
+  border-style: none solid none none;
+}
+#r1c3 {
+  border-style: none none none solid;
+}
+#r3c1 {
+  border-style: none solid none none;
+}
+#r3c3 {
+  border-style: none none none solid;
 }
